fix salary plot

--- a/ds_salaries.ipynb
+++ b/ds_salaries.ipynb
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -667,6 +667,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(df_salary_job_title.sort_values(by=\"salary_in_usd\", ascending=False))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -675,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -707,53 +716,53 @@
        "Research Scientist                           16\n",
        "Data Science Manager                         12\n",
        "Data Architect                               11\n",
-       "Machine Learning Scientist                    8\n",
        "Big Data Engineer                             8\n",
+       "Machine Learning Scientist                    8\n",
+       "Principal Data Scientist                      7\n",
+       "AI Scientist                                  7\n",
        "Data Science Consultant                       7\n",
        "Director of Data Science                      7\n",
        "Data Analytics Manager                        7\n",
-       "AI Scientist                                  7\n",
-       "Principal Data Scientist                      7\n",
-       "Lead Data Engineer                            6\n",
-       "Computer Vision Engineer                      6\n",
        "ML Engineer                                   6\n",
+       "Computer Vision Engineer                      6\n",
        "BI Data Analyst                               6\n",
-       "Business Data Analyst                         5\n",
+       "Lead Data Engineer                            6\n",
        "Data Engineering Manager                      5\n",
+       "Business Data Analyst                         5\n",
        "Head of Data                                  5\n",
        "Applied Data Scientist                        5\n",
-       "Analytics Engineer                            4\n",
        "Applied Machine Learning Scientist            4\n",
-       "Data Analytics Engineer                       4\n",
        "Head of Data Science                          4\n",
-       "Machine Learning Infrastructure Engineer      3\n",
-       "Lead Data Analyst                             3\n",
-       "Lead Data Scientist                           3\n",
-       "Principal Data Engineer                       3\n",
+       "Analytics Engineer                            4\n",
+       "Data Analytics Engineer                       4\n",
        "Machine Learning Developer                    3\n",
+       "Machine Learning Infrastructure Engineer      3\n",
+       "Lead Data Scientist                           3\n",
        "Computer Vision Software Engineer             3\n",
+       "Lead Data Analyst                             3\n",
        "Data Science Engineer                         3\n",
-       "Director of Data Engineering                  2\n",
+       "Principal Data Engineer                       3\n",
        "Principal Data Analyst                        2\n",
-       "Product Data Analyst                          2\n",
        "ETL Developer                                 2\n",
-       "Cloud Data Engineer                           2\n",
+       "Product Data Analyst                          2\n",
+       "Director of Data Engineering                  2\n",
        "Financial Data Analyst                        2\n",
+       "Cloud Data Engineer                           2\n",
+       "Lead Machine Learning Engineer                1\n",
        "NLP Engineer                                  1\n",
        "Head of Machine Learning                      1\n",
-       "Lead Machine Learning Engineer                1\n",
+       "3D Computer Vision Researcher                 1\n",
+       "Data Specialist                               1\n",
+       "Staff Data Scientist                          1\n",
        "Big Data Architect                            1\n",
+       "Finance Data Analyst                          1\n",
        "Marketing Data Analyst                        1\n",
        "Machine Learning Manager                      1\n",
-       "Data Specialist                               1\n",
-       "Finance Data Analyst                          1\n",
-       "Staff Data Scientist                          1\n",
-       "3D Computer Vision Researcher                 1\n",
        "Data Analytics Lead                           1\n",
        "Name: job_title, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +792,7 @@
        "Name: job_title, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,154 +803,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>work_year</th>\n",
-       "      <th>experience_level</th>\n",
-       "      <th>employment_type</th>\n",
-       "      <th>job_title</th>\n",
-       "      <th>salary</th>\n",
-       "      <th>salary_currency</th>\n",
-       "      <th>salary_in_usd</th>\n",
-       "      <th>employee_residence</th>\n",
-       "      <th>remote_ratio</th>\n",
-       "      <th>company_location</th>\n",
-       "      <th>company_size</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>MI</td>\n",
-       "      <td>FT</td>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>70000</td>\n",
-       "      <td>EUR</td>\n",
-       "      <td>79833</td>\n",
-       "      <td>DE</td>\n",
-       "      <td>0</td>\n",
-       "      <td>DE</td>\n",
-       "      <td>L</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>FT</td>\n",
-       "      <td>Machine Learning Scientist</td>\n",
-       "      <td>260000</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>260000</td>\n",
-       "      <td>JP</td>\n",
-       "      <td>0</td>\n",
-       "      <td>JP</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>FT</td>\n",
-       "      <td>Big Data Engineer</td>\n",
-       "      <td>85000</td>\n",
-       "      <td>GBP</td>\n",
-       "      <td>109024</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>50</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>MI</td>\n",
-       "      <td>FT</td>\n",
-       "      <td>Product Data Analyst</td>\n",
-       "      <td>20000</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>20000</td>\n",
-       "      <td>HN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>HN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>SE</td>\n",
-       "      <td>FT</td>\n",
-       "      <td>Machine Learning Engineer</td>\n",
-       "      <td>150000</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>150000</td>\n",
-       "      <td>US</td>\n",
-       "      <td>50</td>\n",
-       "      <td>US</td>\n",
-       "      <td>L</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  work_year experience_level employment_type  \\\n",
-       "0           0       2020               MI              FT   \n",
-       "1           1       2020               SE              FT   \n",
-       "2           2       2020               SE              FT   \n",
-       "3           3       2020               MI              FT   \n",
-       "4           4       2020               SE              FT   \n",
-       "\n",
-       "                    job_title  salary salary_currency  salary_in_usd  \\\n",
-       "0              Data Scientist   70000             EUR          79833   \n",
-       "1  Machine Learning Scientist  260000             USD         260000   \n",
-       "2           Big Data Engineer   85000             GBP         109024   \n",
-       "3        Product Data Analyst   20000             USD          20000   \n",
-       "4   Machine Learning Engineer  150000             USD         150000   \n",
-       "\n",
-       "  employee_residence  remote_ratio company_location company_size  \n",
-       "0                 DE             0               DE            L  \n",
-       "1                 JP             0               JP            S  \n",
-       "2                 GB            50               GB            M  \n",
-       "3                 HN             0               HN            S  \n",
-       "4                 US            50               US            L  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data scientist salary MEAN: 108187.83216783217n    MAX: 412000n    MIN: 2859\n",
+      "Data enrineer salary MEAN: 112725.0n    MAX: 324000n    MIN: 4000\n",
+      "Data analyst salary MEAN: 92893.06185567011n    MAX: 200000n    MIN: 6072\n"
+     ]
     }
    ],
    "source": [
-    "df.head()"
+    "mean_data_scientist = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Scientist\")].mean()\n",
+    "max_data_scientist = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Scientist\")].max()\n",
+    "min_data_scientist = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Scientist\")].min()\n",
+    "\n",
+    "mean_data_engineer = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Engineer\")].mean()\n",
+    "max_data_engineer = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Engineer\")].max()\n",
+    "min_data_engineer = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Engineer\")].min()\n",
+    "\n",
+    "mean_data_analyst = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Analyst\")].mean()\n",
+    "max_data_analyst = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Analyst\")].max()\n",
+    "min_data_analyst = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Analyst\")].min()\n",
+    "\n",
+    "print(f\"Data scientist salary MEAN: {mean_data_scientist}n\\\n",
+    "    MAX: {max_data_scientist}n\\\n",
+    "    MIN: {min_data_scientist}\")\n",
+    "\n",
+    "print(f\"Data enrineer salary MEAN: {mean_data_engineer}n\\\n",
+    "    MAX: {max_data_engineer}n\\\n",
+    "    MIN: {min_data_engineer}\")\n",
+    "\n",
+    "print(f\"Data analyst salary MEAN: {mean_data_analyst}n\\\n",
+    "    MAX: {max_data_analyst}n\\\n",
+    "    MIN: {min_data_analyst}\")"
    ]
   },
   {
