fix basic statistics for selected jobs

--- a/ds_salaries.ipynb
+++ b/ds_salaries.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from statistics import mean"
    ]
   },
   {
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +178,7 @@
        "4                 US            50               US            L  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +245,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +277,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +407,7 @@
        "max    2022.000000  3.040000e+07  600000.000000     100.00000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +441,7 @@
        "607"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,20 +452,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Unnamed: 0', 'work_year', 'experience_level', 'employment_type',\n",
-       "       'job_title', 'salary', 'salary_currency', 'salary_in_usd',\n",
-       "       'employee_residence', 'remote_ratio', 'company_location',\n",
-       "       'company_size'],\n",
+       "Index(['work_year', 'experience_level', 'employment_type', 'job_title',\n",
+       "       'salary', 'salary_currency', 'salary_in_usd', 'employee_residence',\n",
+       "       'remote_ratio', 'company_location', 'company_size'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "2022       124522.006289"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "Director of Data Science  195074.000000"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -667,15 +667,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(df_salary_job_title.sort_values(by=\"salary_in_usd\", ascending=False))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -684,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +753,7 @@
        "Name: job_title, dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +783,7 @@
        "Name: job_title, dtype: int64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,43 +794,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_selected_jobs = df[(df[\"job_title\"] == \"Data Scientist\") | (df[\"job_title\"] == \"Data Engineer\") | (df[\"job_title\"] == \"Data Analyst\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data scientist salary MEAN: 108187.83216783217n    MAX: 412000n    MIN: 2859\n",
-      "Data enrineer salary MEAN: 112725.0n    MAX: 324000n    MIN: 4000\n",
-      "Data analyst salary MEAN: 92893.06185567011n    MAX: 200000n    MIN: 6072\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>work_year</th>\n",
+       "      <th>experience_level</th>\n",
+       "      <th>employment_type</th>\n",
+       "      <th>job_title</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>salary_currency</th>\n",
+       "      <th>salary_in_usd</th>\n",
+       "      <th>employee_residence</th>\n",
+       "      <th>remote_ratio</th>\n",
+       "      <th>company_location</th>\n",
+       "      <th>company_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>70000</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>79833</td>\n",
+       "      <td>DE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>DE</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>EN</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Analyst</td>\n",
+       "      <td>72000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>72000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>100</td>\n",
+       "      <td>US</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>11000000</td>\n",
+       "      <td>HUF</td>\n",
+       "      <td>35735</td>\n",
+       "      <td>HU</td>\n",
+       "      <td>50</td>\n",
+       "      <td>HU</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>EN</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>45000</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>51321</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>FT</td>\n",
+       "      <td>Data Scientist</td>\n",
+       "      <td>3000000</td>\n",
+       "      <td>INR</td>\n",
+       "      <td>40481</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    work_year experience_level employment_type       job_title    salary  \\\n",
+       "0        2020               MI              FT  Data Scientist     70000   \n",
+       "5        2020               EN              FT    Data Analyst     72000   \n",
+       "7        2020               MI              FT  Data Scientist  11000000   \n",
+       "10       2020               EN              FT  Data Scientist     45000   \n",
+       "11       2020               MI              FT  Data Scientist   3000000   \n",
+       "\n",
+       "   salary_currency  salary_in_usd employee_residence  remote_ratio  \\\n",
+       "0              EUR          79833                 DE             0   \n",
+       "5              USD          72000                 US           100   \n",
+       "7              HUF          35735                 HU            50   \n",
+       "10             EUR          51321                 FR             0   \n",
+       "11             INR          40481                 IN             0   \n",
+       "\n",
+       "   company_location company_size  \n",
+       "0                DE            L  \n",
+       "5                US            L  \n",
+       "7                HU            L  \n",
+       "10               FR            S  \n",
+       "11               IN            L  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean_data_scientist = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Scientist\")].mean()\n",
-    "max_data_scientist = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Scientist\")].max()\n",
-    "min_data_scientist = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Scientist\")].min()\n",
-    "\n",
-    "mean_data_engineer = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Engineer\")].mean()\n",
-    "max_data_engineer = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Engineer\")].max()\n",
-    "min_data_engineer = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Engineer\")].min()\n",
-    "\n",
-    "mean_data_analyst = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Analyst\")].mean()\n",
-    "max_data_analyst = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Analyst\")].max()\n",
-    "min_data_analyst = df[\"salary_in_usd\"][(df[\"job_title\"] == \"Data Analyst\")].min()\n",
-    "\n",
-    "print(f\"Data scientist salary MEAN: {mean_data_scientist}n\\\n",
-    "    MAX: {max_data_scientist}n\\\n",
-    "    MIN: {min_data_scientist}\")\n",
-    "\n",
-    "print(f\"Data enrineer salary MEAN: {mean_data_engineer}n\\\n",
-    "    MAX: {max_data_engineer}n\\\n",
-    "    MIN: {min_data_engineer}\")\n",
-    "\n",
-    "print(f\"Data analyst salary MEAN: {mean_data_analyst}n\\\n",
-    "    MAX: {max_data_analyst}n\\\n",
-    "    MIN: {min_data_analyst}\")"
+    "df_selected_jobs.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Basic statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>min</th>\n",
+       "      <th>max</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>job_title</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Data Analyst</th>\n",
+       "      <td>6072</td>\n",
+       "      <td>200000</td>\n",
+       "      <td>92893.061856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Data Engineer</th>\n",
+       "      <td>4000</td>\n",
+       "      <td>324000</td>\n",
+       "      <td>112725.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Data Scientist</th>\n",
+       "      <td>2859</td>\n",
+       "      <td>412000</td>\n",
+       "      <td>108187.832168</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 min     max           mean\n",
+       "job_title                                  \n",
+       "Data Analyst    6072  200000   92893.061856\n",
+       "Data Engineer   4000  324000  112725.000000\n",
+       "Data Scientist  2859  412000  108187.832168"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_selected_jobs.groupby(\"job_title\")[\"salary_in_usd\"].agg([min, max, mean])"
    ]
   },
   {
@@ -856,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +1069,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
