data visualization in power BI added

--- a/ds_salaries.ipynb
+++ b/ds_salaries.ipynb
@@ -1351,19 +1351,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on basic analysis, I see that job title and experience level do not show us all because max salary in intermediate level is bigger than in expert level for data analyst"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Experiance level\n",
     "\n",
-    "SE - Junior \\\n",
-    "MI - Intermediate \\\n",
-    "EN - Expert \\\n",
-    "EX - Director "
+    "SE - Senior \\\n",
+    "MI - Mid \\\n",
+    "EN - Junior \\\n",
+    "EX - Expert "
    ]
   },
   {
